# Rust-CUDA

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  compile.sh  flake.nix  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci_linux.yml  ci_windows.yml  container_images.yml
container/ubuntu24-cuda12/: Dockerfile
container/ubuntu24-cuda13-llvm19/: Dockerfile
crates/cuda_builder/: Cargo.toml
crates/cuda_builder/src/: lib.rs
crates/cuda_std/src/: thread.rs  warp.rs
crates/cuda_std/src/atomic/: intrinsics.rs
crates/cudnn/src/: error.rs
crates/cudnn/src/backend/: graph.rs
crates/cust/: build.rs
crates/cust/src/: module.rs
crates/cust/src/memory/: unified.rs
crates/cust/src/memory/device/: device_buffer.rs
crates/gpu_rand/src/: lib.rs
crates/nvvm/: Cargo.toml
crates/nvvm/src/: lib.rs
crates/ptx/src/: lexer.rs
crates/rustc_codegen_nvvm/: Cargo.toml  build.rs  libintrinsics.ll
crates/rustc_codegen_nvvm/rustc_llvm_wrapper/: LLVMWrapper.h  PassWrapper.cpp  RustWrapper.cpp  rustllvm.h
crates/rustc_codegen_nvvm/src/: abi.rs  allocator.rs  asm.rs  back.rs  builder.rs  const_ty.rs  consts.rs  context.rs  ctx_intrinsics.rs  init.rs  int_replace.rs  intrinsic.rs  lib.rs  link.rs  llvm.rs  lto.rs  mono_item.rs  nvvm.rs  override_fns.rs  target.rs  ty.rs
crates/rustc_codegen_nvvm/src/debug_info/: metadata.rs  mod.rs  util.rs
crates/rustc_codegen_nvvm_macros/src/: lib.rs
crates/rustc_codegen_nvvm_v19/: build.rs  libintrinsics.bc
crates/rustc_codegen_nvvm_v19/src/: back.rs  builder.rs  link.rs  llvm.rs
examples/cuda/vecadd/: Cargo.toml
examples/cuda/vecadd/kernels/: Cargo.toml
examples/cuda/vecadd/kernels/src/: lib.rs
examples/cuda/vecadd/src/: main.rs
examples/vecadd/: Cargo.toml  build.rs
examples/vecadd/src/: main.rs
guide/src/: features.md
guide/src/cuda/: pipeline.md
guide/src/guide/: getting_started.md
scripts/: vast-ai.sh
tests/compiletests/src/: main.rs
tests/compiletests/ui/lang/: compile_fail.stderr
