[workspace]
resolver = "2"
members = [
  "crates/rustc_codegen_nvvm",
  "crates/rustc_codegen_nvvm_macros",  
  #"crates/cuda_std",
  #"crates/cuda_std_macros",  
  #"crates/cuda_builder",
  #"crates/cust",
  #"crates/cust_core",
  #"crates/cust_derive",
  #"crates/cust_raw",
  "examples/cuda/vecadd",
  "examples/cuda/vecadd/kernels",
]

#[profile.dev.package.rustc_codegen_nvvm]
#opt-level = 3 # TODO: try 0?

[profile.release]
debug = true

#[profile.dev]
#opt-level = 0
#lto = false
