[package]
name = "vecadd"
version = "0.1.0"
edition = "2024"

[dependencies]
cust = { path = "../../crates/cust" }
cust_raw = { path = "../../crates/cust_raw", default-features = false, features = ["driver"] }
nanorand = "0.7"

[build-dependencies]
cuda_builder = { workspace = true, default-features = false }
